<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fondo"
    android:layout_height="match_parent"
    tools:context=".controllers.Configuracion">


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="298dp"
        android:layout_height="188dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:background="@color/contenedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbtnTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tiempo"
                android:textColor="@color/letra" />

            <RadioButton
                android:id="@+id/rbtnIntentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intentos"
                android:textColor="@color/letra" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtTiempoC"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:hint="@string/ingresarTiempo"
            android:inputType="number"
            android:textColorHint="@color/letra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="confi"
        android:background="@color/contenedor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        app:layout_constraintVertical_bias="0.413">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/inicio"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="466dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="104dp"
            android:text="Jugar"
            android:textAlignment="center"
            android:textColor="@color/letra"
            android:textSize="20dp" />

    </RelativeLayout>





    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="192dp"
        android:layout_height="146dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nombre" />

</android.support.constraint.ConstraintLayout>